hello-world-lb-azure.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: hello-world
