hello-world-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  ports:
  - nodePort:
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world
  type: NodePort
